<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="end">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/resultView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="16"
            android:gravity="end|bottom"
            android:textColor="@color/white"
            android:textSize="@dimen/result_size"
            android:textIsSelectable="true"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonAC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            app:cornerRadius="1024dp"
            android:text="@string/buttonAC"
            android:textSize="@dimen/operand_size"
            android:textColor="@color/black"
            android:backgroundTint="@color/gray"
            style=""/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            app:cornerRadius="1024dp"
            android:text="@string/buttonC"
            android:textSize="@dimen/operand_size"
            android:textColor="@color/black"
            android:backgroundTint="@color/gray"
            style=""/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonUnary"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            app:cornerRadius="1024dp"
            android:textSize="@dimen/operand_size"
            android:textColor="@color/black"
            android:backgroundTint="@color/gray"
            android:text="@string/buttonUnary"
            style=""/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonDiv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            app:cornerRadius="1024dp"
            android:textSize="@dimen/operand_size"
            android:textColor="@color/white"
            android:backgroundTint="@color/orange"
            android:text="@string/buttonDiv"
            style=""/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            app:cornerRadius="1024dp"
            android:textSize="@dimen/number_size"
            android:textColor="@color/white"
            android:backgroundTint="@color/dark_gray"
            android:text="@string/button7"
            style=""/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            app:cornerRadius="1024dp"
            android:textSize="@dimen/number_size"
            android:textColor="@color/white"
            android:backgroundTint="@color/dark_gray"
            android:text="@string/button8"
            style=""/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            app:cornerRadius="1024dp"
            android:textSize="@dimen/number_size"
            android:textColor="@color/white"
            android:backgroundTint="@color/dark_gray"
            android:text="@string/button9"
            style=""/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonMul"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            app:cornerRadius="1024dp"
            android:textSize="@dimen/operand_size"
            android:textColor="@color/white"
            android:backgroundTint="@color/orange"
            android:text="@string/buttonMul"
            style=""/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            app:cornerRadius="1024dp"
            android:textSize="@dimen/number_size"
            android:textColor="@color/white"
            android:backgroundTint="@color/dark_gray"
            android:text="@string/button4"
            style=""/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            app:cornerRadius="1024dp"
            android:textSize="@dimen/number_size"
            android:textColor="@color/white"
            android:backgroundTint="@color/dark_gray"
            android:text="@string/button5"
            style=""/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            app:cornerRadius="1024dp"
            android:textSize="@dimen/number_size"
            android:textColor="@color/white"
            android:backgroundTint="@color/dark_gray"
            android:text="@string/button6"
            style=""/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonSub"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            app:cornerRadius="1024dp"
            android:textSize="@dimen/operand_size"
            android:textColor="@color/white"
            android:backgroundTint="@color/orange"
            android:text="@string/buttonSub"
            style=""/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            app:cornerRadius="1024dp"
            android:textSize="@dimen/number_size"
            android:textColor="@color/white"
            android:backgroundTint="@color/dark_gray"
            android:text="@string/button1"
            style=""/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            app:cornerRadius="1024dp"
            android:textSize="@dimen/number_size"
            android:textColor="@color/white"
            android:backgroundTint="@color/dark_gray"
            android:text="@string/button2"
            style=""/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            app:cornerRadius="1024dp"
            android:textSize="@dimen/number_size"
            android:textColor="@color/white"
            android:backgroundTint="@color/dark_gray"
            android:text="@string/button3"
            style=""/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            app:cornerRadius="1024dp"
            android:textSize="@dimen/operand_size"
            android:textColor="@color/white"
            android:backgroundTint="@color/orange"
            android:text="@string/buttonAdd"
            style=""/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="17"
            app:cornerRadius="1024dp"
            android:textSize="@dimen/number_size"
            android:textColor="@color/white"
            android:backgroundTint="@color/dark_gray"
            android:text="@string/button0"
            style=""/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonComma"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            app:cornerRadius="1024dp"
            android:textSize="@dimen/operand_size"
            android:textColor="@color/white"
            android:backgroundTint="@color/dark_gray"
            android:text="@string/buttonComma"
            style=""/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonEvaluate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            app:cornerRadius="1024dp"
            android:textSize="@dimen/operand_size"
            android:textColor="@color/white"
            android:backgroundTint="@color/orange"
            android:text="@string/buttonEvaluate"
            style=""/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>